{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 59,
  "lineage": "4de51353-a6d0-f9ab-2ce8-0a5fb9b98375",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-084a7d336e816906b",
            "arn": "arn:aws:ec2:us-east-1:387296555306:instance/i-07b4ac3b9c8272c72",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-ec2-profile",
            "id": "i-07b4ac3b9c8272c72",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "EKS",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-040ea169870e043ec",
            "private_dns": "ip-10-0-1-186.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.186",
            "public_ip": "100.25.153.240",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a5b594685b16b931",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6f3fbc8df00560b",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b2925e302bedda30"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.jenkins_profile",
            "aws_iam_role.jenkins_role",
            "aws_security_group.jenkins_sg",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jenkins_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387296555306:internet-gateway/igw-03358310a82861bc1",
            "id": "igw-03358310a82861bc1",
            "owner_id": "387296555306",
            "region": "us-east-1",
            "vpc_id": "vpc-0bb51f2b495a4b5d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jenkins_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387296555306:route-table/rtb-0ee9b8c49c7494961",
            "id": "rtb-0ee9b8c49c7494961",
            "owner_id": "387296555306",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03358310a82861bc1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb51f2b495a4b5d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.jenkins_igw",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins_route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a2e737c63627ff7",
            "region": "us-east-1",
            "route_table_id": "rtb-0ee9b8c49c7494961",
            "subnet_id": "subnet-0d6f3fbc8df00560b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.jenkins_igw",
            "aws_route_table.jenkins_route_table",
            "aws_subnet.jenkins_subnet",
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387296555306:security-group/sg-0b2925e302bedda30",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2925e302bedda30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-security-group",
            "name_prefix": "",
            "owner_id": "387296555306",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb51f2b495a4b5d2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jenkins_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387296555306:subnet/subnet-0d6f3fbc8df00560b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6f3fbc8df00560b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "387296555306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0bb51f2b495a4b5d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.jenkins_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jenkins_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:387296555306:vpc/vpc-0bb51f2b495a4b5d2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fdfb78c4036af2a5",
            "default_route_table_id": "rtb-0785ef5060a52ae16",
            "default_security_group_id": "sg-0a0a86f38dc90c44b",
            "dhcp_options_id": "dopt-0cd2ba1ed8c905a45",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb51f2b495a4b5d2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0785ef5060a52ae16",
            "owner_id": "387296555306",
            "region": "us-east-1",
            "tags": {
              "Name": "jenkins-vpc"
            },
            "tags_all": {
              "Name": "jenkins-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}